--- a/index.html
+++ b/index.html
@@ -1,58 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles.css" />
     <script src="./scripts.js" defer></script>
     <title>Library</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Library</h1>
 
     <table id="bookshelf">
+      <thead>
         <tr>
-            <th>Author</th>
-            <th>Title</th>
-            <th>Pages</th>
-            <th>Read</th>
+          <th>Author</th>
+          <th>Title</th>
+          <th>Pages</th>
+          <th>Read</th>
+          <th></th>
+          <th></th>
         </tr>
+      </thead>
+      <tbody id="bookshelf-body"></tbody>
     </table>
 
     <dialog>
-        <form>
-            <h1>Add Book</h1>
+      <form>
+        <h1>Add Book</h1>
 
-            <div id="form-author">
-                <label for="author">Author:</label>
-                <input type="text" id="author" name="author" />
-            </div>
-
-            <div id="form-title">
-                <label for="title">Title:</label>
-                <input type="text" id="title" name="title" />
-            </div>
-
-            <div id="form-pages">
-                <label for="pages">Pages:</label>
-                <input type="number" id="pages" name="pages" min="0" step="1" />
-            </div>
-
-            <div id="form-read">
-                <label for="read">Read?</label>
-                <input type="checkbox" id="read" name="read" value="true">
-            </div>
-
-            <div id="submit-book-button">
-                <button type="submit">Submit Book</button>
-            </div>
-        </form>
-
-        <div id="close-form-button">
-            <button>Close</button>
+        <div id="form-author">
+          <label for="author">Author:</label>
+          <input type="text" id="author" name="author" required />
         </div>
+
+        <div id="form-title">
+          <label for="title">Title:</label>
+          <input type="text" id="title" name="title" required />
+        </div>
+
+        <div id="form-pages">
+          <label for="pages">Pages:</label>
+          <input
+            type="number"
+            id="pages"
+            name="pages"
+            min="0"
+            step="1"
+            required
+          />
+        </div>
+
+        <div id="form-read">
+          <label for="read">Read?</label>
+          <input type="checkbox" id="read" name="read" value="true" />
+        </div>
+
+        <div id="submit-book-button">
+          <button type="submit">Submit Book</button>
+        </div>
+      </form>
+
+      <div id="close-form-button">
+        <button>Close</button>
+      </div>
     </dialog>
 
     <button id="add-book-button">Add Book</button>
-</body>
+  </body>
 </html>
