--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Library</h1>
 
     <table id="bookshelf">
-      <thead>
+      <thead id="bookshelf-head">
         <tr>
           <th>Author</th>
           <th>Title</th>
@@ -26,20 +26,21 @@
 
     <dialog>
       <form>
-        <h1>Add Book</h1>
+        <h2>Add Book</h2>
+        <p>* = Required</p>
 
         <div id="form-author">
-          <label for="author">Author:</label>
+          <label for="author">Author *</label>
           <input type="text" id="author" name="author" required />
         </div>
 
         <div id="form-title">
-          <label for="title">Title:</label>
+          <label for="title">Title *</label>
           <input type="text" id="title" name="title" required />
         </div>
 
         <div id="form-pages">
-          <label for="pages">Pages:</label>
+          <label for="pages">Pages *</label>
           <input
             type="number"
             id="pages"
@@ -60,8 +61,8 @@
         </div>
       </form>
 
-      <div id="close-form-button">
-        <button>Close</button>
+      <div id="close-button-container">
+        <button id="close-form-button">Close</button>
       </div>
     </dialog>
 
