Refactor to use class constructor and factories

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
           <input type="checkbox" id="read" name="read" value="true" />
         </div>
 
-        <div id="submit-book-button">
-          <button type="submit">Submit Book</button>
+        <div id="submit-book-button-container">
+          <button type="submit" id="submit-book-button">Submit Book</button>
         </div>
       </form>
 
